# romea-core-localisation-imu

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  package.xml  romea_localisation_imu.repos  romea_localisation_imu.rosinstall  romea_localisation_imu_public.repos
cmake/: romea_core_localisation_imuConfig.cmake.in  romea_localisation_imuConfig.cmake.in
include/romea_core_localisation_imu/: AngularSpeedBias.hpp  CheckupAttitude.hpp  CheckupInertialMeasurements.hpp  LocalisationIMUPlugin.hpp
include/romea_localisation_imu/: AngularSpeedBias.hpp  CheckupAttitude.hpp  CheckupInertialMeasurements.hpp  LocalisationIMUPlugin.hpp
src/: AngularSpeedBias.cpp  CheckupAttitude.cpp  CheckupInertialMeasurements.cpp  LocalisationIMUPlugin.cpp
test/: CMakeLists.txt  helper.hpp  test_angular_speed_bias.cpp  test_checkup_attitude.cpp  test_checkup_inertial_measurements.cpp  test_checkup_inertial_measurments.cpp  test_imu_plugin.cpp
